@@ -15,3 +15,4 @@ depth: 1
 
  * On the Locked Pages report, limit the "locked by" filter to just users who have locked pages (Stefan Hammer)
  * Prevent JavaScript error when using StreamField on views without commenting support, such as snippets (Jacob Topp-Mugglestone)
+ * Modify base template for new projects so that links opened from the preview panel open in a new window (Sage Abdullah)
